--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Key Vibes</title>
     <script src="js/paper-full.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.js"></script>
-
+    <link rel="shortcut icon" href="logomakr.com/8Z1xTM">
     <link rel="stylesheet" href="css/style.css">
 
 
