updating app title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Key Vibes</title>
-    <script src="js/paper-full.js"></script>
 
-    <!-- Howler.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Key Vibes &verbar; Hit a Key, Get a Sound and Colour</title>
+  <script src="js/paper-full.js"></script>
+
+  <!-- Howler.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.js"></script>
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
@@ -17,12 +18,12 @@
   <link rel="manifest" href="./assets/">
 
   <!-- My Style -->
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 
-    <script type="text/paperscript" canvas="myCanvas">
+  <script type="text/paperscript" canvas="myCanvas">
 
-      var keyData = {
+    var keyData = {
         q: {
           sound: new Howl({
             src: ['sounds/bubbles.mp3']
@@ -266,8 +267,10 @@
 
 </script>
 </head>
+
 <body>
-<canvas id="myCanvas" resize></canvas>
+  <canvas id="myCanvas" resize></canvas>
 
 </body>
+
 </html>
